@@ -5,6 +5,7 @@
 BZFlag 1.11
 -----------
 
+* Bots drive around corners faster - Frank Thilo
 * Rip out the ref counted texture system, as TM controls this now - Dave Brosius
 
 BZFlag 1.10.4 "not a smurf"
